# moro-engine

./: .gitignore  README.md  pyproject.toml
configs/: mvp.yaml
src/catmoro/: cli.py
src/catmoro/cat_process/: __init__.py  base.py  poisson.py
src/catmoro/config/: __init__.py  loader.py  schema.py
src/catmoro/core/: __init__.py  rng.py  types.py
src/catmoro/engine/: __init__.py  runner.py  simulate_year.py
src/catmoro/insurance/: __init__.py  contracts.py  pricing.py  program.py
src/catmoro/io/: __init__.py  writers.py
src/catmoro/mapping/: __init__.py  base.py  linear.py
src/catmoro/mortality/: __init__.py  base.py  event_linked_jump.py
src/catmoro/opt/: __init__.py  base.py  grid.py
src/catmoro/risk/: __init__.py  capital.py  metrics.py
src/catmoro/severity/: __init__.py  base.py  lognormal.py
tests/: test_engine_smoke.py
